# FzP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Rather.c  WhatNew.txt  build.sh  conf.c  fzp.sh  interface.c  prog  scirpt.sh  test  test.sh
src/: .gitignore  pacC.sh  pacHelp.sh  pacP.sh  pacQ.sh  pacS.sh  pacU.sh
src/pacP.d/: All-File.conf  Binary.conf  Clean-Remove.conf  Executable.conf  Hard-Remove.conf  binary.conf  exemple.conf  information.conf
